[gd_scene load_steps=6 format=3 uid="uid://dfocn8dg2df5y"]

[ext_resource type="Script" path="res://Assets/Enemies/Enemy_ranged.gd" id="1_76qk3"]
[ext_resource type="Texture2D" uid="uid://dp4pks7x2njtj" path="res://Assets/Enemies/Asteriski_merkki_2.png" id="2_6ab8f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m3e88"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eury0"]
radius = 536.239

[sub_resource type="CircleShape2D" id="CircleShape2D_nucr3"]
radius = 62.0322

[node name="Enemy_ranged" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_76qk3")

[node name="AsteriskiMerkki1" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_6ab8f")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m3e88")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_eury0")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-67, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(66, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-16, 1)
target_position = Vector2(0, 76)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
position = Vector2(18, 0)
target_position = Vector2(0, 76)

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
shape = SubResource("CircleShape2D_nucr3")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(70, 0)

[node name="ParticleCooldown" type="Timer" parent="."]
wait_time = 1.5

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_exited" from="PlayerCollision" to="." method="_on_player_collision_body_exited"]
[connection signal="timeout" from="ParticleCooldown" to="." method="_on_particle_cooldown_timeout"]
